# qm9star_query

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-build-push.yml
qm9star_query/: run_api_server.py  utils.py
qm9star_query/api/: deps.py  main.py
qm9star_query/api/routes/: formula.py  molecules.py  snapshots.py
qm9star_query/core/: config.py  db.py
qm9star_query/crud/: formulas_crud.py  molecules_crud.py  snapshots_crud.py
qm9star_query/dataset/: base_dataset.py  sub_datasets.py
qm9star_query/models/: __init__.py  formula.py  molecule.py  snapshot.py  user.py  utils.py
qm9star_query/nn/: __init__.py  dimenetpp.py
qm9star_query/train/: run.py
tutorial/: 1-download_and_deploy_qm9star.md  2-query_example.ipynb  3-create_dataset.ipynb  4-train_a_NN_potential_model.ipynb
tutorial/atom_ref/: C-b3lyp-d3-6-311+G**.gjf  F-b3lyp-d3-6-311+G**.gjf  H-b3lyp-d3-6-311+G**.gjf  N-b3lyp-d3-6-311+G**.gjf  O-b3lyp-d3-6-311+G**.gjf  summary.csv
tutorial/data_split/: testset_ids.pt  validset_ids.pt
tutorial/qm9_ref/: README.md  parse_qm9.py
tutorial/sandbox/: best_model  log.csv  log_human_read.csv
