[tool.poetry]
name = "qm9star-query"
version = "0.1.0"
description = "A SQLModel-based repository dedicated to helping users access the PostgreSQL-based qm9star database more easily in a Python environment."
authors = ["tmj <mj_t@zju.edu.cn>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlmodel = "^0.0.16"
psycopg = "^3.1.18"
pgvector = "^0.2.5"
rdkit = "^2023.9.6"
psycopg2-binary = "^2.9.9"
tqdm = "^4.66.4"
torch-geometric = "^2.5.3"
torch = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
